@@ -230,11 +230,9 @@ QList<Song> DevicesPage::selectedSongs(bool allowPlaylists) const
     return DevicesModel::self()->songs(proxy.mapToSource(selected, proxy.enabled() && Settings::self()->filteredOnly()));
 }
 
-void DevicesPage::addSelectionToPlaylist(const QString &name, bool replace, quint8 priorty, bool randomAlbums)
+void DevicesPage::addSelectionToPlaylist(const QString &name, bool replace, quint8 priorty)
 {
-    Q_UNUSED(randomAlbums)
     QStringList files=playableUrls();
-
     if (!files.isEmpty()) {
         if (name.isEmpty()) {
             emit add(files, replace, priorty);
